force-app/main/default/objects/Subject__c/fields/Instructor__c.field-meta.xml
<CustomField>
    <fullName>Instructor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instructor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Subjects</relationshipLabel>
    <relationshipName>Subjects</relationshipName>
    <type>Lookup</type>
</CustomField>