force-app/main/default/objects/Subject__c/fields/Maximum_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Enrollment__c</fullName>
    <label>Maximum Enrollment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>