force-app/main/default/objects/Subject__c/fields/Semester_Offered__c.field-meta.xml
<CustomField>
    <fullName>Semester_Offered__c</fullName>
    <label>Semester Offered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>