force-app/main/default/objects/Subject__c/fields/Subject_Code__c.field-meta.xml
<CustomField>
    <fullName>Subject_Code__c</fullName>
    <label>Subject Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>