force-app/main/default/objects/Subject__c/fields/Subject_Level__c.field-meta.xml
<CustomField>
    <fullName>Subject_Level__c</fullName>
    <label>Subject Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>