force-app/main/default/objects/Subject__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subject_Name__c</columns>
    <columns>Subject_Code__c</columns>
    <columns>Description__c</columns>
    <columns>Number_of_Units__c</columns>
    <columns>Prerequisites__c</columns>
    <columns>Semester_Offered__c</columns>
    <columns>Subject_Level__c</columns>
    <columns>Maximum_Enrollment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>